--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^0.2.4"
+    "swiper": "^8.3.2",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
