--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "16.16.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
