--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "extends": "react-app"
   },
   "engines": {
-    "node": "16.16.0"
+    "node": "16.16.0",
+    "npm" : "8.7.0"
   },
   "browserslist": {
     "production": [
